# York-Project-Code

./: .gitignore  README.md  pyproject.toml
application/: requirements.txt
application/bashrc/: bashrc_csd3  bashrc_pita  generic_aliases
application/chease_tools/: aliases.sh  align_prof_pressure.sh  chease_analysis.sh  dr_term_at_q.py  get_tm_parameters.py  run_chease.sh
application/debug/: log.py
application/jorek_tools/: aliases.sh  calc_jorek_growth.py  calculator.py  compare_jorek_to_model.sh  current.pp  currents.pp  dat_to_pandas.py  diagnose.sh  diagnostics.pp  diagnostics_mod.pp  extract_jorek_flux.sh  extract_jorek_growth.sh  extract_model_input_params.sh  extract_q_profile.sh  get_flux.pp  get_flux_old.pp  h5_extractor.py  interpolate_profiles.py  jorek_dat_to_array.py  model_params.sh  plot_jorek_output.py  plot_profile.gnuplot  postproc_wrapper.sh  psi_t_from_vtk.py  quick_profile_fit.py  sample_qprofiles.pp  sample_resistivity.pp  shaping.sh  test.pp  time_conversion.py
application/rdcon_tools/: aliases.sh  delta_gw.py
application/tearing_mode_plotter/: plot_file.py  plot_magnetic_island_width.py  plot_outer_region.py  (+1 more)
linear-solver/: linear-solver.py  linear_solver.py  time_dependent_solver.py
tearing-mode-solver/: README.md  constant_psi_approximation.py  helpers.py  linear_solver.py  new_ql_solver.py  nl_td_solver.py  non_linear_solver.py  outer_region_solver.py  phi_reconstruction.py  profiles.py  pyplot_helper.py  quasi_linear_solver.py  solution_plotter.py  time_dependent_solver.py  validate_simplified_delta.py  y_sol.py
(+167 files in other folders)
