[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "application"
version = "0.1.0"
description = "Quasi-linear tearing mode solver"
authors = ["Marcus Quantrill <mjjq500@york.ac.uk>"]

[tool.poetry.dependencies]
contourpy="1.3.1"
cycler="0.12.1"              
fonttools="4.56.0"
kiwisolver="1.4.8"           
matplotlib="3.10.0"          
numpy="2.2.2"                
packaging="24.2"             
pandas="2.2.3"               
pillow="11.1.0"              
pyparsing="3.2.1"            
python-dateutil="2.9.0.post0"
pytz="2025.1"                
scipy="1.15.1"               
six="1.17.0"                 
tqdm="4.67.1"                
tzdata="2025.1"              

